# ip-kvm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
ip-kvm-assets/: index.html  index.ts  keyboard.ts  mouse.ts  tsconfig.json
src/: api_error.rs  keyboard.rs  main.rs  mass_storage.rs  mouse.rs  mouse_legacy.rs
usb-otg/: Cargo.toml
usb-otg/src/: async_fd.rs  hid.rs  lib.rs  mass_storage.rs
usb-otg/src/hid/: generic_desktop.rs  hid_composite.rs  keyboard.rs  led.rs  mouse.rs
util/: Cargo.toml
util/src/: error.rs  fs.rs  lib.rs
