[package]
name = "ip-kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
strip = true
opt-level = "z"  # Optimize for size.
lto = true
#panic = "abort"

[dependencies]
usb-otg = { path = "usb-otg" }
util = { path = "util" }
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["ws", "headers"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
futures = "0.3"
once_cell = "1"
hyper = { version = "0.14", features = ["full"] }
