[package]
name = "ip-kvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
strip = true
opt-level = "z"   # Optimize for size.
lto = true
#panic = "abort"

[dependencies]
usb-otg = { path = "usb-otg" }
util = { path = "util" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
futures = "0.3.29"
once_cell = "1.19.0"
hyper = { version = "1.0.1", features = ["full"] }
serde_json = { version = "1.0.108" }
serde = { version = "1.0.193", features = ["derive"] }
anyhow = "1.0.75"
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
pretty_env_logger = "0.5"
log = "0.4"
