[package]
name = "usb-otg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
util = { path = "../util" }
regex = "1.10.2"
tokio = { version = "1.35.0", features = ["full"] }
nix = {version = "0.27.1", features = ["fs"]}
futures = "0.3.29"
